--- a/index.html
+++ b/index.html
@@ -35,36 +35,64 @@ and is wrapped around the whole page content, except for the footer in this exam
 
     <div class="w3-container">
       <p>When demand for easing the lockdown was rising, Nepal saw a huge spike in coronavirus cases. The cases don't seem to decrease in spite of a series of lockdowns imposed by the government. Coronavirus cases are now coming up from new areas. So is Nepal really at the stage to ease the lockdown ?
+<br>
+<h5><b>Increasing Cases in Nepal</b></h5>
 
-Increasing Cases in Nepal
+There was a sudden increase in cases throughout the country and cases even surfaced in new regions. This says that there are 
+a lot more cases which still need to be detected. Without testing we cannot conclude that any region is safe from the virus. <b>
+Testing is the only thing which can help us to control the virus quickly.</b> 
+<br>
+<br>
+<b>Authorities need to widen the testing and testing should not just be limited to only people who had travel history or were 
+in contact with any infected.</b> More the infected remained untraced more will be the danger associated with the spreading of the virus. 
+<br>
+<br>
+Large numbers of infected are asymptomatic i.e. they do not show any symptoms on their body but they are contagious and thus, 
+can spread the virus. Tracing of the asymptomatic cases is very important to control the spread. But the asymptomatic can only
+ be traced if we test them. Testing in large numbers in a wider area will help us knowing the asymptomatic cases and also helps us know whether the region is safe from infection or not. 
+<br>
+<br>
+Thus we need a large number of test kits to conduct mass screening of the population. Mass screening should be the government's
+ top priority before announcing any region safe or as they say <b>Green Zone</b>. We cannot conclude that a region is safe without 
+ proper mass screening and just on the basis that no case has surfaced till now. There are no cases at someplace today but who can 
+ guarantee for tomorrow.  
 
-There was a sudden increase in cases throughout the country and cases even surfaced in new regions. This says that there are a lot more cases which still need to be detected. Without testing we cannot conclude that any region is safe from the virus. <b>Testing is the only thing which can help us to control the virus quickly</b>.
- 
-<b>Authorities need to widen the testing and testing should not just be limited to only people who had travel history or were in contact with any infected.</b> More the infected remained untraced more will be the danger associated with the spreading of the virus. 
+<h5><b>Is Lockdown being followed strictly ?</b></h5></br>
 
-Large numbers of infected are asymptomatic i.e. they do not show any symptoms on their body but they are contagious and thus, can spread the virus. Tracing of the asymptomatic cases is very important to control the spread. But the asymptomatic can only be traced if we test them. Testing in large numbers in a wider area will help us knowing the asymptomatic cases and also helps us know whether the region is safe from infection or not. 
+To make the lockdown successful people are required to follow it strictly not for their safety only but for the safety of the 
+ommunity. But we can see people going out for unnecessary things and not adhering to social distancing guidelines. Yeah, it
+ is necessary to go to the market to buy stuff but authority should have made a proper schedule for residents of specific 
+ regions to come out.
+<br><br>
+ It was seen that many city authorities allocated a specific time for the market. But allocating a few hours for all the 
+ residents of the city will cause huge crowds at shops. <b>Rather than opening for a few hours make the shop open throughout
+ the day and allocate different time slots to residents of specific regions to come.</b> Lockdown is of no use if huge gatherings 
+ of people are still happening. 
+<br><br>
+Issue of unnecessary travel passes is also another serious concern which authorities need to think about. People in need should only
+ be getting the permit and strict guidelines should be made to avoid the issuing of unnecessary passes.
 
-Thus we need a large number of test kits to conduct mass screening of the population. Mass screening should be the government's top priority before announcing any region safe or as they say <b>Green Zone</b>. We cannot conclude that a region is safe without proper mass screening and just on the basis that no case has surfaced till now. There are no cases at someplace today but who can guarantee for tomorrow.  
+<br><br>
+People should be made aware that this lockdown is going to keep them safe.Yeah many people must be worrying about their jobs, 
+income, business or other important things. But it's the government’s job to assure their citizens, to motivate their citizens, 
+to give them hope that we are going to get through this and everything will be back to normal. 
+<br><br>
+Government must bring plans to help people bring their life back on track as it was before.  Government should formulate revival 
+measures to sustain the business and sectors affected by the lockdown. From an individual level we all should also come forward to help the needy. 
 
-<h5><b>Is Lockdown being followed strictly ?</b></h5>
+<h5><b>Mass Testing & Efficient Lockdown</b></h5> 
 
-To make the lockdown successful people are required to follow it strictly not for their safety only but for the safety of the community. But we can see people going out for unnecessary things and not adhering to social distancing guidelines. Yeah, it is necessary to go to the market to buy stuff but authority should have made a proper schedule for residents of specific regions to come out.
+Widening the testing and making the lockdown efficient is what two most important things on which the authorities should be 
+focused on. Utilizing the lockdown to test large numbers of people and containing viruses from specific regions should be done by the authorities. 
 
- It was seen that many city authorities allocated a specific time for the market. But allocating a few hours for all the residents of the city will cause huge crowds at shops. <b>Rather than opening for a few hours make the shop open throughout the day and allocate different time slots to residents of specific regions to come.</b> Lockdown is of no use if huge gatherings of people are still happening. 
-
-Issue of unnecessary travel passes is also another serious concern which authorities need to think about. People in need should only be getting the permit and strict guidelines should be made to avoid the issuing of unnecessary passes.
-
-People should be made aware that this lockdown is going to keep them safe.<br><br>Yeah many people must be worrying about their jobs, income, business or other important things. But it's the government’s job to assure their citizens, to motivate their citizens, to give them hope that we are going to get through this and everything will be back to normal. 
-
-Government must bring plans to help people bring their life back on track as it was before.  Government should formulate revival measures to sustain the business and sectors affected by the lockdown. From an individual level we all should also come forward to help the needy. 
-
-Mass Testing & Efficient Lockdown 
-
-Widening the testing and making the lockdown efficient is what two most important things on which the authorities should be focused on. Utilizing the lockdown to test large numbers of people and containing viruses from specific regions should be done by the authorities. 
-
-There will be no use of lockdown if new cases keep coming and new regions keep becoming hotspot of the virus. To bring the life back on track soon this lockdown period is very crucial but this all depends on the steps taken by authorities. How efficient are they in tracing the infected and how soon they are able to do that. 
-
-For now we all on our individual level should support the authorities. We  should follow the guideline and take proper measure to keep ourselves safe. This is the time of crisis, we all need support and thus we all need to support each other, be each other's support system. Be Safe and Stay Home.</br></p>
+<br><br>
+There will be no use of lockdown if new cases keep coming and new regions keep becoming hotspot of the virus. To bring the 
+life back on track soon this lockdown period is very crucial but this all depends on the steps taken by authorities. 
+How efficient are they in tracing the infected and how soon they are able to do that. 
+<br><br>
+For now we all on our individual level should support the authorities. We  should follow the guideline and take proper measure 
+to keep ourselves safe. This is the time of crisis, we all need support and thus we all need to support each other, 
+be each other's support system. <b>Be Safe and Stay Home.</b></br></p>
       <div class="w3-row">
         <div class="w3-col m8 s12">
           <p><button class="w3-button w3-padding-large w3-white w3-border"><b>READ MORE »</b></button></p>
